force-app/main/default/objects/Sansan_CI__BizCard__c/Sansan_CI__BizCard__c.object-meta.xml
<CustomObject>
    <label>名刺</label>
    <nameField>
        <label>名刺名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>