force-app/main/default/objects/Sansan_CI__BizCard__c/fields/Sansan_CI__AccountCreatedFrom__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__AccountCreatedFrom__c</fullName>
    <formula>Sansan_CI__Contact__r.Account.Sansan_CI__CreatedFrom__c</formula>
    <label>AccountCreatedFrom</label>
    <type>Text</type>
</CustomField>