force-app/main/default/objects/Sansan_CI__BizCard__c/fields/Sansan_CI__AccountId__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__AccountId__c</fullName>
    <formula>Sansan_CI__Contact__r.AccountId</formula>
    <label>AccountId</label>
    <type>Text</type>
</CustomField>