force-app/main/default/objects/Sansan_CI__BizCard__c/fields/Sansan_CI__Address_Combined__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__Address_Combined__c</fullName>
    <formula>Sansan_CI__State__c  &amp;  Sansan_CI__City__c   &amp;  Sansan_CI__Street__c   &amp;  Sansan_CI__Building__c</formula>
    <label>住所</label>
    <type>Text</type>
</CustomField>