force-app/main/default/objects/Sansan_CI__BizCard__c/fields/Sansan_CI__AutoLinkExistingBizCardId__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__AutoLinkExistingBizCardId__c</fullName>
    <label>既存名刺自動関連づけバッチ_既存名刺ID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>