force-app/main/default/objects/Sansan_CI__BizCard__c/fields/Sansan_CI__AutoLinkExistingBizCardRecordId__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__AutoLinkExistingBizCardRecordId__c</fullName>
    <label>既存名刺自動関連づけバッチ_既存名刺レコードID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>