force-app/main/default/objects/Sansan_CI__BizCard__c/fields/Sansan_CI__AutomaticConversionFlg__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__AutomaticConversionFlg__c</fullName>
    <formula>Sansan_CI__Lead__c  == &apos;&apos;   &amp;&amp;  Sansan_CI__Contact__c  == &apos;&apos;   &amp;&amp;  !Sansan_CI__IsNotDistribution__c &amp;&amp;  Sansan_CI__CI_PersonId__c != &apos;&apos; &amp;&amp;   Sansan_CI__CI_SOC__c  != &apos;&apos; &amp;&amp; ISPICKVAL(Sansan_CI__DigitizationStatus__c, &apos;completed&apos;)</formula>
    <label>自動関連づけ対象フラグ</label>
    <type>Checkbox</type>
</CustomField>