force-app/main/default/objects/Sansan_CI__BizCard__c/fields/Sansan_CI__AutomaticNextProcessingDate__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__AutomaticNextProcessingDate__c</fullName>
    <label>自動連係_次回処理日時</label>
    <type>DateTime</type>
</CustomField>