force-app/main/default/objects/Sansan_CI__BizCard__c/fields/Sansan_CI__AutomaticProcessedErrMsg__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__AutomaticProcessedErrMsg__c</fullName>
    <label>自動関連づけエラーメッセージ</label>
    <type>TextArea</type>
</CustomField>