force-app/main/default/objects/Sansan_CI__BizCard__c/fields/Sansan_CI__AutomaticProcessedFlg__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__AutomaticProcessedFlg__c</fullName>
    <defaultValue>false</defaultValue>
    <label>自動関連づけ処理済フラグ</label>
    <type>Checkbox</type>
</CustomField>