force-app/main/default/objects/Sansan_CI__BizCard__c/fields/Sansan_CI__AutomaticProcessingNum__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__AutomaticProcessingNum__c</fullName>
    <label>自動連係_処理回数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>