force-app/main/default/objects/Sansan_CI__BizCard__c/fields/Sansan_CI__AutomaticReprocessingFlg__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__AutomaticReprocessingFlg__c</fullName>
    <formula>ISPICKVAL(Sansan_CI__DigitizationStatus__c, &apos;completed&apos;) &amp;&amp; (ISNULL(Sansan_CI__AutomaticNextProcessingDate__c)  || Sansan_CI__AutomaticNextProcessingDate__c &lt;  NOW())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>自動連係_再処理対象</label>
    <type>Checkbox</type>
</CustomField>