force-app/main/default/objects/Sansan_CI__BizCard__c/fields/Sansan_CI__BizCardId__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__BizCardId__c</fullName>
    <externalId>true</externalId>
    <label>名刺 ID</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
</CustomField>