force-app/main/default/objects/Sansan_CI__BizCard__c/fields/Sansan_CI__BizCardId_Unique__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__BizCardId_Unique__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>名刺 ID（重複制御有り）</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>