force-app/main/default/objects/Sansan_CI__BizCard__c/fields/Sansan_CI__BizCardLinkedToUpdateDateTime__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__BizCardLinkedToUpdateDateTime__c</fullName>
    <label>名刺関連づけ先更新日時</label>
    <type>DateTime</type>
</CustomField>