force-app/main/default/objects/Sansan_CI__BizCard__c/fields/Sansan_CI__BizCardLinkToDateTime__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__BizCardLinkToDateTime__c</fullName>
    <label>名刺関連づけ日時</label>
    <type>DateTime</type>
</CustomField>