force-app/main/default/objects/Sansan_CI__BizCard__c/fields/Sansan_CI__CI_AutomaticKey__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__CI_AutomaticKey__c</fullName>
    <formula>Sansan_CI__CI_SOC__c  &amp; &apos;_&apos; &amp;  Sansan_CI__CI_PersonId__c</formula>
    <label>CI_自動関連づけキー</label>
    <type>Text</type>
</CustomField>