force-app/main/default/objects/Sansan_CI__BizCard__c/fields/Sansan_CI__CI_InputErrorFlg__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__CI_InputErrorFlg__c</fullName>
    <defaultValue>false</defaultValue>
    <label>連携エラーフラグ</label>
    <type>Checkbox</type>
</CustomField>