force-app/main/default/objects/Sansan_CI__BizCard__c/fields/Sansan_CI__CI_SLC__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__CI_SLC__c</fullName>
    <externalId>true</externalId>
    <label>SLC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>