force-app/main/default/objects/Sansan_CI__BizCard__c/fields/Sansan_CI__CI_UpdatedTime__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__CI_UpdatedTime__c</fullName>
    <label>名刺データ最終更新日時</label>
    <type>DateTime</type>
</CustomField>