force-app/main/default/objects/Sansan_CI__BizCard__c/fields/Sansan_CI__CompanyName__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__CompanyName__c</fullName>
    <label>会社名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>