force-app/main/default/objects/Sansan_CI__BizCard__c/fields/Sansan_CI__Contact__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>取引先責任者</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>名刺</relationshipLabel>
    <relationshipName>contactChild</relationshipName>
    <type>Lookup</type>
</CustomField>