force-app/main/default/objects/Sansan_CI__BizCard__c/fields/Sansan_CI__ContactCreatedFrom__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__ContactCreatedFrom__c</fullName>
    <formula>Sansan_CI__Contact__r.Sansan_CI__CreatedFrom__c</formula>
    <label>ContactCreatedFrom</label>
    <type>Text</type>
</CustomField>