force-app/main/default/objects/Sansan_CI__BizCard__c/fields/Sansan_CI__Department__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__Department__c</fullName>
    <label>部署</label>
    <length>255</length>
    <type>Text</type>
</CustomField>