force-app/main/default/objects/Sansan_CI__BizCard__c/fields/Sansan_CI__DigitizationStatus__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__DigitizationStatus__c</fullName>
    <label>データ化状況</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>processing</fullName>
            </value>
            <value>
                <fullName>completed</fullName>
            </value>
            <value>
                <fullName>unreadable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>