force-app/main/default/objects/Sansan_CI__BizCard__c/fields/Sansan_CI__Email__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__Email__c</fullName>
    <label>メール</label>
    <type>Email</type>
</CustomField>