force-app/main/default/objects/Sansan_CI__BizCard__c/fields/Sansan_CI__Email_Original__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__Email_Original__c</fullName>
    <label>メールアドレス (オリジナル)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>