force-app/main/default/objects/Sansan_CI__BizCard__c/fields/Sansan_CI__ExchangeDate__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__ExchangeDate__c</fullName>
    <label>名刺交換日</label>
    <type>Date</type>
</CustomField>