force-app/main/default/objects/Sansan_CI__BizCard__c/fields/Sansan_CI__FullName__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__FullName__c</fullName>
    <formula>Sansan_CI__LastName__c &amp; &quot; &quot; &amp; Sansan_CI__FirstName__c</formula>
    <label>氏名</label>
    <type>Text</type>
</CustomField>