force-app/main/default/objects/Sansan_CI__BizCard__c/fields/Sansan_CI__IsBizCardInbox__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__IsBizCardInbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>メール署名取込</label>
    <type>Checkbox</type>
</CustomField>