force-app/main/default/objects/Sansan_CI__BizCard__c/fields/Sansan_CI__IsNotDistribution__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__IsNotDistribution__c</fullName>
    <defaultValue>false</defaultValue>
    <label>関連づけしない</label>
    <type>Checkbox</type>
</CustomField>