force-app/main/default/objects/Sansan_CI__BizCard__c/fields/Sansan_CI__IsUserCreated__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__IsUserCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ユーザ名刺作成</label>
    <type>Checkbox</type>
</CustomField>