force-app/main/default/objects/Sansan_CI__BizCard__c/fields/Sansan_CI__IsVirtualCard__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__IsVirtualCard__c</fullName>
    <defaultValue>false</defaultValue>
    <label>デジタル名刺</label>
    <type>Checkbox</type>
</CustomField>