force-app/main/default/objects/Sansan_CI__BizCard__c/fields/Sansan_CI__Lead__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>リード</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>名刺</relationshipLabel>
    <relationshipName>leadChild</relationshipName>
    <type>Lookup</type>
</CustomField>