force-app/main/default/objects/Sansan_CI__BizCard__c/fields/Sansan_CI__LeadCreatedFrom__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__LeadCreatedFrom__c</fullName>
    <formula>Sansan_CI__Lead__r.Sansan_CI__CreatedFrom__c</formula>
    <label>LeadCreatedFrom</label>
    <type>Text</type>
</CustomField>