force-app/main/default/objects/Sansan_CI__BizCard__c/fields/Sansan_CI__Mobile__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__Mobile__c</fullName>
    <label>携帯</label>
    <type>Phone</type>
</CustomField>