force-app/main/default/objects/Sansan_CI__BizCard__c/fields/Sansan_CI__Note__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__Note__c</fullName>
    <label>メモ</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>