force-app/main/default/objects/Sansan_CI__BizCard__c/fields/Sansan_CI__Owner_SansanUserName__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__Owner_SansanUserName__c</fullName>
    <label>名刺所有者 Sansan ユーザ名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>