force-app/main/default/objects/Sansan_CI__BizCard__c/fields/Sansan_CI__Owner_Status__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__Owner_Status__c</fullName>
    <label>所有者ユーザ反映ステータス</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SPECIFIED_OWNER_IS_NOT_AVAILABLE</fullName>
                <label>指定所有者無効</label>
            </value>
            <value>
                <fullName>OWNER_NOT_SPECIFIED</fullName>
                <label>所有者指定なし</label>
            </value>
            <value>
                <fullName>SPECIFIED_OWNER_IS_SET</fullName>
                <label>指定所有者を反映</label>
            </value>
            <value>
                <fullName>OWNER_CHANGED_BY_USER</fullName>
                <label>ユーザが所有者を変更</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>