force-app/main/default/objects/Sansan_CI__BizCard__c/fields/Sansan_CI__OwnerId_Original__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__OwnerId_Original__c</fullName>
    <label>所有者 ID (オリジナル)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>