force-app/main/default/objects/Sansan_CI__BizCard__c/fields/Sansan_CI__PersonnelChangeIssuedDate__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__PersonnelChangeIssuedDate__c</fullName>
    <label>人事異動発令日</label>
    <type>Date</type>
</CustomField>