force-app/main/default/objects/Sansan_CI__BizCard__c/fields/Sansan_CI__Phone2__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__Phone2__c</fullName>
    <label>電話2</label>
    <type>Phone</type>
</CustomField>