force-app/main/default/objects/Sansan_CI__BizCard__c/fields/Sansan_CI__Phone2_Original__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__Phone2_Original__c</fullName>
    <label>電話番号2 (オリジナル)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>