force-app/main/default/objects/Sansan_CI__BizCard__c/fields/Sansan_CI__PhoneticFirstName__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__PhoneticFirstName__c</fullName>
    <label>名カナ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>