force-app/main/default/objects/Sansan_CI__BizCard__c/fields/Sansan_CI__PhoneticLastName__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__PhoneticLastName__c</fullName>
    <label>姓カナ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>