force-app/main/default/objects/Sansan_CI__BizCard__c/fields/Sansan_CI__PostConversionUpdateFlg__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__PostConversionUpdateFlg__c</fullName>
    <formula>IF ( ((Sansan_CI__BizCardLinkToDateTime__c &lt;=  Sansan_CI__CI_PublishedTime__c) &amp;&amp; ISBLANK(Sansan_CI__BizCardLinkedToUpdateDateTime__c)) || (Sansan_CI__BizCardLinkedToUpdateDateTime__c &lt;=  Sansan_CI__CI_PublishedTime__c) ,true,false
)</formula>
    <label>変換後更新フラグ</label>
    <type>Checkbox</type>
</CustomField>