force-app/main/default/objects/Sansan_CI__BizCard__c/fields/Sansan_CI__RegisteredTime__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__RegisteredTime__c</fullName>
    <label>名刺登録日時</label>
    <type>DateTime</type>
</CustomField>