force-app/main/default/objects/Sansan_CI__BizCard__c/fields/Sansan_CI__Sansan_BizCardInfo__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__Sansan_BizCardInfo__c</fullName>
    <formula>IF ( 
    ISBLANK(Sansan_CI__BizCardId__c) , 
    &apos;&apos;,
    HYPERLINK(&apos;https://ap.sansan.com/v/cards/&apos; + Sansan_CI__BizCardId__c + &apos;/?accessType=direct&apos;, $Label.Sansan_CI__PAGE_CARDDETAILS_LABEL_SANSANCARDDETAILS)
)</formula>
    <label>Sansan 名刺情報</label>
    <type>Text</type>
</CustomField>