force-app/main/default/objects/Sansan_CI__BizCard__c/fields/Sansan_CI__Sansan_CompanyId__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__Sansan_CompanyId__c</fullName>
    <label>Sansan 会社 ID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>