force-app/main/default/objects/Sansan_CI__BizCard__c/fields/Sansan_CI__Sansan_PersonInfo__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__Sansan_PersonInfo__c</fullName>
    <formula>HYPERLINK(&apos;https://ap.sansan.com/v/persons/?midid=&apos; + Sansan_CI__BizCardId__c, $Label.Sansan_CI__PAGE_CARDDETAILS_LABEL_SANSANCONTACTDETAILS)</formula>
    <label>Sansan 人物情報</label>
    <type>Text</type>
</CustomField>