force-app/main/default/objects/Sansan_CI__BizCard__c/fields/Sansan_CI__State__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__State__c</fullName>
    <label>都道府県</label>
    <length>255</length>
    <type>Text</type>
</CustomField>