force-app/main/default/objects/Sansan_CI__BizCard__c/fields/Sansan_CI__Tags_Original__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__Tags_Original__c</fullName>
    <label>タグ（オリジナル）</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>