force-app/main/default/objects/Sansan_CI__BizCard__c/fields/Sansan_CI__Url__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__Url__c</fullName>
    <label>URL</label>
    <type>Url</type>
</CustomField>