force-app/main/default/objects/Sansan_CI__BizCard__c/fields/Sansan_CI__WithoutCorporateCapacityCompanyName__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__WithoutCorporateCapacityCompanyName__c</fullName>
    <label>法人格削除会社名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>