force-app/main/default/objects/Sansan_CI__BizCard__c/listViews/Sansan_CI__All.listView-meta.xml
<ListView>
    <fullName>Sansan_CI__All</fullName>
    <columns>NAME</columns>
    <columns>Sansan_CI__Contact__c</columns>
    <columns>Sansan_CI__IsNotDistribution__c</columns>
    <columns>Sansan_CI__CompanyName__c</columns>
    <columns>Sansan_CI__FullName__c</columns>
    <columns>Sansan_CI__Department__c</columns>
    <columns>Sansan_CI__Title__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Sansan_CI__ExchangeDate__c</columns>
    <columns>Sansan_CI__CI_PublishedTime__c</columns>
    <columns>Sansan_CI__Sansan_BizCardInfo__c</columns>
    <columns>Sansan_CI__Address_Combined__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sansan_CI__CompanyName__c</field>
        <operation>contains</operation>
        <value>三菱電機</value>
    </filters>
    <label>すべて選択</label>
</ListView>