force-app/main/default/objects/Sansan_CI__BizCard__c/listViews/Sansan_CI__BizCard_NoLink.listView-meta.xml
<ListView>
    <fullName>Sansan_CI__BizCard_NoLink</fullName>
    <columns>NAME</columns>
    <columns>Sansan_CI__Contact__c</columns>
    <columns>Sansan_CI__Lead__c</columns>
    <columns>Sansan_CI__IsNotDistribution__c</columns>
    <columns>Sansan_CI__CompanyName__c</columns>
    <columns>Sansan_CI__FullName__c</columns>
    <columns>Sansan_CI__Department__c</columns>
    <columns>Sansan_CI__Title__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Sansan_CI__ExchangeDate__c</columns>
    <columns>Sansan_CI__CI_PublishedTime__c</columns>
    <columns>Sansan_CI__BizCardLinkToDateTime__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Sansan_CI__IsNotDistribution__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Sansan_CI__BizCardLinkToDateTime__c</field>
        <operation>equals</operation>
    </filters>
    <label>02 私の関連づけがない名刺</label>
</ListView>