force-app/main/default/objects/Sansan_CI__BizCard__c/listViews/Sansan_CI__BizCard_NoLink_Mob_En.listView-meta.xml
<ListView>
    <fullName>Sansan_CI__BizCard_NoLink_Mob_En</fullName>
    <columns>NAME</columns>
    <columns>Sansan_CI__ExchangeDate__c</columns>
    <columns>Sansan_CI__IsNotDistribution__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Sansan_CI__BizCardLinkToDateTime__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Sansan_CI__IsNotDistribution__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>06 My unlinked cards (mobile)</label>
</ListView>