force-app/main/default/objects/Sansan_CI__BizCard__c/listViews/Sansan_CI__BizCard_NoLinkAll_En.listView-meta.xml
<ListView>
    <fullName>Sansan_CI__BizCard_NoLinkAll_En</fullName>
    <columns>NAME</columns>
    <columns>Sansan_CI__Contact__c</columns>
    <columns>Sansan_CI__Lead__c</columns>
    <columns>Sansan_CI__IsNotDistribution__c</columns>
    <columns>Sansan_CI__CompanyName__c</columns>
    <columns>Sansan_CI__FullName__c</columns>
    <columns>Sansan_CI__Department__c</columns>
    <columns>Sansan_CI__Title__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Sansan_CI__ExchangeDate__c</columns>
    <columns>Sansan_CI__CI_PublishedTime__c</columns>
    <columns>Sansan_CI__Sansan_BizCardInfo__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sansan_CI__BizCardLinkToDateTime__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Sansan_CI__IsNotDistribution__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>03 Company&apos;s unlinked cards</label>
</ListView>