force-app/main/default/objects/Sansan_CI__BizCard__c/listViews/Sansan_CI__BizCard_Own_Mob.listView-meta.xml
<ListView>
    <fullName>Sansan_CI__BizCard_Own_Mob</fullName>
    <columns>NAME</columns>
    <columns>Sansan_CI__IsNotDistribution__c</columns>
    <columns>Sansan_CI__ExchangeDate__c</columns>
    <filterScope>Mine</filterScope>
    <label>07 自分の担当する名刺 (モバイル用)</label>
</ListView>