force-app/main/default/objects/Sansan_CI__BizCard__c/listViews/Sansan_CI__BizCard_Own_Mob_En.listView-meta.xml
<ListView>
    <fullName>Sansan_CI__BizCard_Own_Mob_En</fullName>
    <columns>NAME</columns>
    <columns>Sansan_CI__IsNotDistribution__c</columns>
    <columns>Sansan_CI__ExchangeDate__c</columns>
    <filterScope>Mine</filterScope>
    <label>07 My cards (mobile)</label>
</ListView>